# 7D-Solutions-Platform

./: .current_bead  .dockerignore  .env.docker.example  .env.example  .env.release  .file-size-allowlist  .g10-allowlist  .g4-allowlist  .g7-subject-allowlist  .gitignore  .gitleaks.toml  .tmux.conf.agentcore  .ubsignore  .yamllint.yaml  AGENTS.md  AGENT_MAIL.md  APP_ID_SCOPING_AUDIT.md  AR_NAMING_MIGRATION_COMPLETE.md  CHATGPT-IMPROVEMENTS-IMPLEMENTED.md  CLAUDE.md  COVERAGE-ANALYSIS.md  Cargo.toml  Cargo.toml.tmp  DB-SKELETON.md  DOCKER.md  Dockerfile  EVENT-SUBSCRIPTIONS-MAP.md  FINAL-IMPLEMENTATION-SUMMARY.md  INTEGRATION.md  MIGRATION-COMPLETE.md  MODES_ANALYSIS_PROGRESS.md  MODES_CONTEXT_PACK.md  MODES_OF_REASONING_REPORT_AND_ANALYSIS_OF_PROJECT.md  MODE_OUTPUT_A1.md  MODE_OUTPUT_A8.md  MODE_OUTPUT_F2.md  MODE_OUTPUT_F3.md  MODE_OUTPUT_F4.md  MODE_OUTPUT_F5.md  MODE_OUTPUT_F7.md  (+71 more)
clients/ap/: Cargo.toml  openapi.json  package-lock.json  package.json  vitest.config.ts
clients/ap/src/: allocations.rs  ap.d.ts  bills.rs  index.ts  lib.rs  payment_runs.rs  payment_terms.rs  purchase_orders.rs  reports.rs  tax_reports.rs  types_1.rs  types_2.rs  vendors.rs
clients/ap/tests/: auth-middleware-proof.test.ts
clients/ar/: Cargo.toml  openapi.json  package-lock.json  package.json  tsconfig.json
clients/ar/src/: aging.rs  allocation.rs  ar.d.ts  charges.rs  credit_notes.rs  creditmemos.rs  customers.rs  disputes.rs  dunning.rs  event_payloads.rs  events.rs  index.ts  invoices.rs  lib.rs  payment_methods.rs  paymentmethods.rs  payments.rs  reconciliation.rs  refunds.rs  subscriptions.rs  tax.rs  tax_config.rs  tax_reports.rs  tax_tenant_config.rs  taxconfig.rs  taxreports.rs  types_1.rs  types_2.rs  usage.rs  webhooks.rs  write_offs.rs
clients/notifications/: Cargo.toml  openapi.json  package-lock.json  package.json
clients/notifications/src/: dlq.rs  inbox.rs  index.ts  lib.rs  notifications.d.ts  sends.rs  templates.rs  types.rs
clients/platform-client-doc-mgmt/: Cargo.toml  openapi.json  package-lock.json  package.json
clients/platform-client-doc-mgmt/src/: distributions.rs  documents.rs  index.ts  lib.rs  platform-client-doc-mgmt.d.ts  retention.rs  revisions.rs  templates.rs  types.rs
clients/sales-orders/: Cargo.toml
clients/sales-orders/src/: blankets.rs  lib.rs  orders.rs  types.rs
clients/shop-floor-gates/: Cargo.toml
clients/shop-floor-gates/src/: lib.rs  types.rs
clients/treasury/: Cargo.toml  openapi.json  package-lock.json  package.json  tsconfig.json
clients/treasury/src/: accounts.rs  gl_reconciliation.rs  import.rs  index.ts  lib.rs  reconciliation.rs  reports.rs  treasury.d.ts  types.rs
e2e-tests/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
e2e-tests/tests/: accrual_auto_reversal_e2e.rs  accrual_create_e2e.rs  aging_partial_payment_e2e.rs  ap_bill_approval_e2e.rs  ap_multicurrency_gl.rs  ap_payment_run_allocations_aging.rs  ap_payment_run_e2e.rs  ap_po_receipt_bill_gl.rs  ap_vendor_party_lifecycle_e2e.rs  ap_vendor_party_link_e2e.rs  api_conformance_e2e.rs  ar_aging_adjustments_e2e.rs  ar_aging_base_e2e.rs  ar_aging_report_e2e.rs  ar_credit_note_balance_e2e.rs  ar_credit_note_e2e.rs  ar_dunning_workflow_e2e.rs  ar_gl_journal_entries_e2e.rs  ar_outbox_atomicity_e2e.rs  ar_usage_capture_e2e.rs  ar_write_off_e2e.rs  ar_writeoff_e2e.rs  audit_actor_propagation_e2e.rs  audit_append_only_e2e.rs  audit_coverage_sweep_e2e.rs  audit_field_diff_e2e.rs  audit_oracle.rs  audit_policy_enforcement_e2e.rs  auth_rbac_coverage_e2e.rs  balance_posting_e2e.rs  balance_reversal_e2e.rs  bill_run_e2e.rs  bom_enrichment_e2e.rs  bom_lifecycle_e2e.rs  business_day_one_e2e.rs  cashflow_statement_e2e.rs  circuit_breaker_e2e.rs  compliance_export_determinism_e2e.rs  composite_wo_failure_injection_e2e.rs  config_validation_failfast_e2e.rs  (+170 more)
e2e-tests/tests/common/: mod.rs
e2e-tests/tests/stress/: auth_rate_limit_under_load_e2e.rs  db_pool_exhaustion_identity_auth_e2e.rs  double_spend_budget_e2e.rs  event_bus_flood_jetstream_e2e.rs  financial_double_spend_allocation_e2e.rs  gl_double_post_e2e.rs  gl_double_post_idempotency_e2e.rs  inventory_oversell_at_scale_e2e.rs  inventory_oversell_e2e.rs  large_payload_e2e.rs  (+2 more)
modules/ap/: Cargo.toml  Dockerfile.workspace  README.md  REVISIONS.md  module.toml
modules/ar/: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  REVISIONS.md  module.toml
modules/bom/: Cargo.toml  Dockerfile.workspace  REVISIONS.md  module.toml
modules/consolidation/: Cargo.toml  Dockerfile.workspace  README.md  REVISIONS.md  module.toml
modules/crm-pipeline/: Cargo.toml  module.toml
modules/customer-portal/: Cargo.toml  Dockerfile.workspace  REVISIONS.md  module.toml
modules/fixed-assets/: Cargo.toml  Dockerfile.workspace  README.md  REVISIONS.md  module.toml
modules/gl/: CHANGELOG.md  Cargo.toml  DB_REPOS_DEMO.md  Dockerfile.workspace  README.md  REVISIONS.md  module.toml
modules/integrations/: Cargo.toml  Dockerfile.workspace  README.md  REVISIONS.md  module.toml
modules/maintenance/: Cargo.toml  Dockerfile.workspace  README.md  REVISIONS.md  module.toml
modules/notifications/: CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.workspace  README.md  REVISIONS.md  module.toml
modules/numbering/: Cargo.toml  Dockerfile.workspace  REVISIONS.md  module.toml
modules/outside-processing/: Cargo.toml  module.toml
modules/party/: Cargo.toml  Dockerfile.workspace  README.md  REVISIONS.md  module.toml
modules/payments/: .env.example  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.workspace  README.md  REVISIONS.md  module.toml
modules/pdf-editor/: .gitignore  Cargo.toml  README.md  REVISIONS.md  module.toml
modules/production/: Cargo.toml  REVISIONS.md  module.toml
modules/quality-inspection/: Cargo.toml  Dockerfile.workspace  REVISIONS.md  module.toml
modules/reporting/: Cargo.toml  Dockerfile.workspace  README.md  REVISIONS.md  module.toml
modules/shipping-receiving/: Cargo.toml  Dockerfile.workspace  README.md  REVISIONS.md  module.toml
modules/shop-floor-gates/: Cargo.toml  module.toml
(+8248 files in other folders)
