[workspace]
members = [
  "platform/event-bus",
  "platform/identity-auth",
  "platform/audit",
  "platform/tenant-registry",
  "platform/control-plane",
  "platform/projections",
  "platform/security",
  "platform/tax-core",
  "modules/ar",
  "modules/subscriptions",
  "modules/payments",
  "modules/notifications",
  "modules/gl",
  "modules/inventory",
  "modules/ap",
  "modules/treasury",
  "modules/fixed-assets",
  "modules/consolidation",
  "modules/timekeeping",
  "modules/party",
  "modules/integrations",
  "modules/ttp",
  "modules/reporting",
  "tools/contract-tests",
  "tools/simulation",
  "tools/tenantctl",
  "tools/projection-rebuild",
  "tools/compliance-export",
  "tools/demo-seed",
  "tools/stabilization-gate",
  "e2e-tests"
]

# Workspace-level settings
resolver = "2"

# Future: shared dependencies can be defined here
# [workspace.dependencies]

# Core dependencies aligned (2026-02-11):
# - axum 0.8
# - sqlx 0.8
# - tower 0.5
# - tower-http 0.6
# Workspace builds successfully.
