[workspace]
members = [
  "platform/event-bus",
  "platform/event-consumer",
  "platform/identity-auth",
  "platform/audit",
  "platform/tenant-registry",
  "platform/control-plane",
  "platform/projections",
  "platform/security",
  "platform/tax-core",
  "platform/health",
  "platform/platform-contracts",
  "platform/http-contracts",
  "platform/platform-sdk",
  "platform/auth-kit",
  "modules/ar",
  "modules/subscriptions",
  "modules/payments",
  "modules/notifications",
  "modules/gl",
  "modules/inventory",
  "modules/ap",
  "modules/treasury",
  "modules/fixed-assets",
  "modules/consolidation",
  "modules/timekeeping",
  "modules/party",
  "modules/integrations",
  "modules/ttp",
  "modules/maintenance",
  "modules/shipping-receiving",
  "modules/reporting",
  "modules/pdf-editor",
  "modules/numbering",
  "platform/doc-mgmt",
  "modules/workflow",
  "modules/customer-portal",
  "modules/workforce-competence",
  "modules/bom",
  "modules/production",
  "modules/quality-inspection",
  "modules/smoke-test",
  "tools/contract-tests",
  "tools/simulation",
  "tools/tenantctl",
  "tools/projection-rebuild",
  "tools/compliance-export",
  "tools/demo-seed",
  "tools/stabilization-gate",
  "tools/client-codegen",
  "clients/party",
  "clients/ar",
  "clients/platform-client-doc-mgmt",
  "clients/platform-client-tenant-registry",
  "clients/ap",
  "clients/gl",
  "clients/payments",
  "clients/production",
  "clients/shipping-receiving",
  "clients/numbering",
  "clients/treasury",
  "clients/fixed-assets",
  "clients/workflow",
  "clients/integrations",
  "clients/reporting",
  "clients/bom",
  "clients/inventory",
  "clients/identity-auth",
  "clients/smoke-test",
  "clients/notifications",
  "clients/consolidation",
  "modules/vertical-proof",
  "e2e-tests",
]

# Workspace-level settings
resolver = "2"

# Workspace-wide lints — all members inherit via [lints] workspace = true
[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
# Allow these lints workspace-wide — fixing them would require invasive
# refactoring (struct wrappers, type aliases, trait renames) with no
# correctness benefit.  Re-evaluate when the codebase stabilises.
too_many_arguments = "allow"
type_complexity    = "allow"
should_implement_trait = "allow"   # from_str helpers that aren't FromStr

# Future: shared dependencies can be defined here
# [workspace.dependencies]

# Core dependencies aligned (2026-02-11):
# - axum 0.8
# - sqlx 0.8
# - tower 0.5
# - tower-http 0.6
# Workspace builds successfully.
