[package]
name = "e2e-tests"
version = "0.1.0"
edition = "2021"

[[test]]
name = "bill_run_e2e"
path = "tests/bill_run_e2e.rs"

[[test]]
name = "real_e2e"
path = "tests/real_e2e.rs"

[[test]]
name = "phase10_governance_e2e"
path = "tests/phase10_governance_e2e.rs"

[[test]]
name = "cross_module_invoice_payment_e2e"
path = "tests/cross_module_invoice_payment_e2e.rs"

[[test]]
name = "cross_module_subscription_invoice_e2e"
path = "tests/cross_module_subscription_invoice_e2e.rs"

[[test]]
name = "cross_module_invoice_gl_e2e"
path = "tests/cross_module_invoice_gl_e2e.rs"

[[test]]
name = "cross_module_payment_invoice_e2e"
path = "tests/cross_module_payment_invoice_e2e.rs"

[[test]]
name = "cross_module_payment_unknown_e2e"
path = "tests/cross_module_payment_unknown_e2e.rs"

[[test]]
name = "cross_module_replay_safety_e2e"
path = "tests/cross_module_replay_safety_e2e.rs"

[[test]]
name = "cross_module_concurrency_safety_e2e"
path = "tests/cross_module_concurrency_safety_e2e.rs"

[[test]]
name = "audit_append_only_e2e"
path = "tests/audit_append_only_e2e.rs"

[[test]]
name = "audit_actor_propagation_e2e"
path = "tests/audit_actor_propagation_e2e.rs"

[[test]]
name = "audit_field_diff_e2e"
path = "tests/audit_field_diff_e2e.rs"

[[test]]
name = "ar_outbox_atomicity_e2e"
path = "tests/ar_outbox_atomicity_e2e.rs"

[[test]]
name = "payments_outbox_atomicity_e2e"
path = "tests/payments_outbox_atomicity_e2e.rs"

[[test]]
name = "subscriptions_outbox_atomicity_e2e"
path = "tests/subscriptions_outbox_atomicity_e2e.rs"

[[test]]
name = "gl_outbox_atomicity_e2e"
path = "tests/gl_outbox_atomicity_e2e.rs"

[[test]]
name = "release_provenance_smoke_e2e"
path = "tests/release_provenance_smoke_e2e.rs"

[[test]]
name = "projection_cursor_contract_e2e"
path = "tests/projection_cursor_contract_e2e.rs"

[[test]]
name = "tenant_registry_smoke_e2e"
path = "tests/tenant_registry_smoke_e2e.rs"

[[test]]
name = "service_to_service_auth_e2e"
path = "tests/service_to_service_auth_e2e.rs"

[[test]]
name = "version_endpoints_smoke_e2e"
path = "tests/version_endpoints_smoke_e2e.rs"

[[test]]
name = "scale_100_tenants_truth_at_scale_e2e"
path = "tests/scale_100_tenants_truth_at_scale_e2e.rs"

[[test]]
name = "provisioning_api_e2e"
path = "tests/provisioning_api_e2e.rs"

[[test]]
name = "provisioning_full_lifecycle_e2e"
path = "tests/provisioning_full_lifecycle_e2e.rs"

[[test]]
name = "tenant_summary_api_e2e"
path = "tests/tenant_summary_api_e2e.rs"

[[test]]
name = "demo_seed_determinism_e2e"
path = "tests/demo_seed_determinism_e2e.rs"

[[test]]
name = "ar_usage_capture_e2e"
path = "tests/ar_usage_capture_e2e.rs"

[[test]]
name = "usage_to_invoice_e2e"
path = "tests/usage_to_invoice_e2e.rs"

[[test]]
name = "credit_note_gl_posting_e2e"
path = "tests/credit_note_gl_posting_e2e.rs"

[[test]]
name = "ar_credit_note_e2e"
path = "tests/ar_credit_note_e2e.rs"

[[test]]
name = "ar_writeoff_e2e"
path = "tests/ar_writeoff_e2e.rs"

[[test]]
name = "writeoff_gl_posting_e2e"
path = "tests/writeoff_gl_posting_e2e.rs"

[[test]]
name = "dunning_state_machine_e2e"
path = "tests/dunning_state_machine_e2e.rs"

[[test]]
name = "ar_aging_base_e2e"
path = "tests/ar_aging_base_e2e.rs"

[[test]]
name = "ar_aging_adjustments_e2e"
path = "tests/ar_aging_adjustments_e2e.rs"

[[test]]
name = "revrec_contract_create_e2e"
path = "tests/revrec_contract_create_e2e.rs"

[[test]]
name = "revrec_schedule_builder_e2e"
path = "tests/revrec_schedule_builder_e2e.rs"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
event-bus = { path = "../platform/event-bus" }
async-nats = "0.33"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
subscriptions-rs = { path = "../modules/subscriptions" }
payments-rs = { path = "../modules/payments" }
ar-rs = { path = "../modules/ar" }
gl-rs = { path = "../modules/gl" }
tower = { version = "0.5", features = ["util"] }
axum = "0.8"
audit = { path = "../platform/audit" }
projections = { path = "../platform/projections" }
tenant-registry = { path = "../platform/tenant-registry" }
control-plane = { path = "../platform/control-plane" }
security = { path = "../platform/security" }
compliance-export = { path = "../tools/compliance-export" }
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3"
hmac = "0.12"
base64 = "0.22"

[dev-dependencies]
serial_test = "3.0"
