[package]
name = "e2e-tests"
version = "0.1.0"
edition = "2021"

[[test]]
name = "tenant_lifecycle_e2e"
path = "tests/tenant_lifecycle_e2e.rs"

[[test]]
name = "hardening_smoke"
path = "tests/hardening_smoke.rs"

[[test]]
name = "bill_run_e2e"
path = "tests/bill_run_e2e.rs"

[[test]]
name = "real_e2e"
path = "tests/real_e2e.rs"

[[test]]
name = "phase10_governance_e2e"
path = "tests/phase10_governance_e2e.rs"

[[test]]
name = "cross_module_invoice_payment_e2e"
path = "tests/cross_module_invoice_payment_e2e.rs"

[[test]]
name = "cross_module_subscription_invoice_e2e"
path = "tests/cross_module_subscription_invoice_e2e.rs"

[[test]]
name = "cross_module_invoice_gl_e2e"
path = "tests/cross_module_invoice_gl_e2e.rs"

[[test]]
name = "cross_module_payment_invoice_e2e"
path = "tests/cross_module_payment_invoice_e2e.rs"

[[test]]
name = "cross_module_payment_unknown_e2e"
path = "tests/cross_module_payment_unknown_e2e.rs"

[[test]]
name = "cross_module_replay_safety_e2e"
path = "tests/cross_module_replay_safety_e2e.rs"

[[test]]
name = "cross_module_concurrency_safety_e2e"
path = "tests/cross_module_concurrency_safety_e2e.rs"

[[test]]
name = "audit_append_only_e2e"
path = "tests/audit_append_only_e2e.rs"

[[test]]
name = "audit_actor_propagation_e2e"
path = "tests/audit_actor_propagation_e2e.rs"

[[test]]
name = "audit_field_diff_e2e"
path = "tests/audit_field_diff_e2e.rs"

[[test]]
name = "ar_outbox_atomicity_e2e"
path = "tests/ar_outbox_atomicity_e2e.rs"

[[test]]
name = "payments_outbox_atomicity_e2e"
path = "tests/payments_outbox_atomicity_e2e.rs"

[[test]]
name = "subscriptions_outbox_atomicity_e2e"
path = "tests/subscriptions_outbox_atomicity_e2e.rs"

[[test]]
name = "gl_outbox_atomicity_e2e"
path = "tests/gl_outbox_atomicity_e2e.rs"

[[test]]
name = "release_provenance_smoke_e2e"
path = "tests/release_provenance_smoke_e2e.rs"

[[test]]
name = "projection_cursor_contract_e2e"
path = "tests/projection_cursor_contract_e2e.rs"

[[test]]
name = "tenant_registry_smoke_e2e"
path = "tests/tenant_registry_smoke_e2e.rs"

[[test]]
name = "service_to_service_auth_e2e"
path = "tests/service_to_service_auth_e2e.rs"

[[test]]
name = "service_account_auth_e2e"
path = "tests/service_account_auth_e2e.rs"

[[test]]
name = "version_endpoints_smoke_e2e"
path = "tests/version_endpoints_smoke_e2e.rs"

[[test]]
name = "scale_100_tenants_truth_at_scale_e2e"
path = "tests/scale_100_tenants_truth_at_scale_e2e.rs"

[[test]]
name = "provisioning_api_e2e"
path = "tests/provisioning_api_e2e.rs"

[[test]]
name = "provisioning_full_lifecycle_e2e"
path = "tests/provisioning_full_lifecycle_e2e.rs"

[[test]]
name = "tenant_summary_api_e2e"
path = "tests/tenant_summary_api_e2e.rs"

[[test]]
name = "demo_seed_determinism_e2e"
path = "tests/demo_seed_determinism_e2e.rs"

[[test]]
name = "ar_usage_capture_e2e"
path = "tests/ar_usage_capture_e2e.rs"

[[test]]
name = "usage_to_invoice_e2e"
path = "tests/usage_to_invoice_e2e.rs"

[[test]]
name = "credit_note_gl_posting_e2e"
path = "tests/credit_note_gl_posting_e2e.rs"

[[test]]
name = "ar_credit_note_e2e"
path = "tests/ar_credit_note_e2e.rs"

[[test]]
name = "ar_writeoff_e2e"
path = "tests/ar_writeoff_e2e.rs"

[[test]]
name = "writeoff_gl_posting_e2e"
path = "tests/writeoff_gl_posting_e2e.rs"

[[test]]
name = "ar_write_off_e2e"
path = "tests/ar_write_off_e2e.rs"

[[test]]
name = "dunning_state_machine_e2e"
path = "tests/dunning_state_machine_e2e.rs"

[[test]]
name = "ar_aging_base_e2e"
path = "tests/ar_aging_base_e2e.rs"

[[test]]
name = "ar_aging_adjustments_e2e"
path = "tests/ar_aging_adjustments_e2e.rs"

[[test]]
name = "revrec_contract_create_e2e"
path = "tests/revrec_contract_create_e2e.rs"

[[test]]
name = "revrec_schedule_builder_e2e"
path = "tests/revrec_schedule_builder_e2e.rs"

[[test]]
name = "dunning_scheduler_concurrency_e2e"
path = "tests/dunning_scheduler_concurrency_e2e.rs"

[[test]]
name = "fx_rates_e2e"
path = "tests/fx_rates_e2e.rs"

[[test]]
name = "tax_provider_local_e2e"
path = "tests/tax_provider_local_e2e.rs"

[[test]]
name = "reconciliation_matching_e2e"
path = "tests/reconciliation_matching_e2e.rs"

[[test]]
name = "payment_allocation_fifo_e2e"
path = "tests/payment_allocation_fifo_e2e.rs"

[[test]]
name = "reconciliation_scheduled_runs_e2e"
path = "tests/reconciliation_scheduled_runs_e2e.rs"

[[test]]
name = "dunning_suspension_e2e"
path = "tests/dunning_suspension_e2e.rs"

[[test]]
name = "accrual_create_e2e"
path = "tests/accrual_create_e2e.rs"

[[test]]
name = "fx_revaluation_e2e"
path = "tests/fx_revaluation_e2e.rs"

[[test]]
name = "tax_jurisdiction_resolution_e2e"
path = "tests/tax_jurisdiction_resolution_e2e.rs"

[[test]]
name = "revrec_recognition_run_e2e"
path = "tests/revrec_recognition_run_e2e.rs"

[[test]]
name = "accrual_auto_reversal_e2e"
path = "tests/accrual_auto_reversal_e2e.rs"

[[test]]
name = "audit_coverage_sweep_e2e"
path = "tests/audit_coverage_sweep_e2e.rs"

[[test]]
name = "projection_replay_verification_e2e"
path = "tests/projection_replay_verification_e2e.rs"

[[test]]
name = "tax_commit_void_e2e"
path = "tests/tax_commit_void_e2e.rs"

[[test]]
name = "revrec_amendment_e2e"
path = "tests/revrec_amendment_e2e.rs"

[[test]]
name = "inventory_receipt_e2e"
path = "tests/inventory_receipt_e2e.rs"

[[test]]
name = "inventory_reservation_e2e"
path = "tests/inventory_reservation_e2e.rs"

[[test]]
name = "inventory_gl_e2e"
path = "tests/inventory_gl_e2e.rs"

[[test]]
name = "inventory_receipt_issue_gl"
path = "tests/inventory_receipt_issue_gl.rs"

[[test]]
name = "inventory_fifo_determinism"
path = "tests/inventory_fifo_determinism.rs"

[[test]]
name = "inventory_concurrency"
path = "tests/inventory_concurrency.rs"

[[test]]
name = "inventory_idempotency"
path = "tests/inventory_idempotency.rs"

[[test]]
name = "inventory_low_stock_notifications"
path = "tests/inventory_low_stock_notifications.rs"

[[test]]
name = "inventory_extensions_integrated"
path = "tests/inventory_extensions_integrated.rs"

[[test]]
name = "reporting_gl_statements"
path = "tests/reporting_gl_statements.rs"

[[test]]
name = "reporting_aging_reconcile"
path = "tests/reporting_aging_reconcile.rs"

[[test]]
name = "reporting_kpis"
path = "tests/reporting_kpis.rs"

[[test]]
name = "ap_multicurrency_gl"
path = "tests/ap_multicurrency_gl.rs"

[[test]]
name = "ap_po_receipt_bill_gl"
path = "tests/ap_po_receipt_bill_gl.rs"

[[test]]
name = "treasury_cash_position_e2e"
path = "tests/treasury_cash_position_e2e.rs"

[[test]]
name = "treasury_bank_recon_cash_position"
path = "tests/treasury_bank_recon_cash_position.rs"

[[test]]
name = "treasury_cc_recon_liability"
path = "tests/treasury_cc_recon_liability.rs"

[[test]]
name = "timekeeping_end_to_end"
path = "tests/timekeeping_end_to_end.rs"

[[test]]
name = "timekeeping_billing_e2e"
path = "tests/timekeeping_billing_e2e.rs"

[[test]]
name = "consolidation_end_to_end"
path = "tests/consolidation_end_to_end.rs"

[[test]]
name = "fixed_assets_end_to_end"
path = "tests/fixed_assets_end_to_end.rs"

[[test]]
name = "fixed_assets_depreciation_e2e"
path = "tests/fixed_assets_depreciation_e2e.rs"

[[test]]
name = "audit_oracle"
path = "tests/audit_oracle.rs"

[[test]]
name = "integrations_webhook_ingest_route"
path = "tests/integrations_webhook_ingest_route.rs"

[[test]]
name = "integrations_integration"
path = "tests/integrations_integration.rs"

[[test]]
name = "rbac_enforcement"
path = "tests/rbac_enforcement.rs"

[[test]]
name = "party_master_integration"
path = "tests/party_master_integration.rs"

[[test]]
name = "party_master_e2e"
path = "tests/party_master_e2e.rs"

[[test]]
name = "ttp_billing_monthly_one_time"
path = "tests/ttp_billing_monthly_one_time.rs"

[[test]]
name = "platform_billing_invoices_tenant"
path = "tests/platform_billing_invoices_tenant.rs"

[[test]]
name = "subscriptions_lifecycle"
path = "tests/subscriptions_lifecycle.rs"

[[test]]
name = "subscriptions_billing_cycle_e2e"
path = "tests/subscriptions_billing_cycle_e2e.rs"

[[test]]
name = "subscription_billing_cycle_invoice_e2e"
path = "tests/subscription_billing_cycle_invoice_e2e.rs"

[[test]]
name = "notifications_e2e"
path = "tests/notifications_e2e.rs"

[[test]]
name = "treasury_forecast_e2e"
path = "tests/treasury_forecast_e2e.rs"

[[test]]
name = "ap_vendor_party_link_e2e"
path = "tests/ap_vendor_party_link_e2e.rs"

[[test]]
name = "business_day_one_e2e"
path = "tests/business_day_one_e2e.rs"

[[test]]
name = "ar_dunning_workflow_e2e"
path = "tests/ar_dunning_workflow_e2e.rs"

[[test]]
name = "ar_gl_journal_entries_e2e"
path = "tests/ar_gl_journal_entries_e2e.rs"

[[test]]
name = "gl_ar_automation_e2e"
path = "tests/gl_ar_automation_e2e.rs"

[[test]]
name = "ap_payment_run_e2e"
path = "tests/ap_payment_run_e2e.rs"

[[test]]
name = "payments_ar_settlement_e2e"
path = "tests/payments_ar_settlement_e2e.rs"

[[test]]
name = "ar_aging_report_e2e"
path = "tests/ar_aging_report_e2e.rs"

[[test]]
name = "notifications_ar_chain_e2e"
path = "tests/notifications_ar_chain_e2e.rs"

[[test]]
name = "timekeeping_thin_e2e"
path = "tests/timekeeping_thin_e2e.rs"

[[test]]
name = "sr_inventory_gl_cross_module_e2e"
path = "tests/sr_inventory_gl_cross_module_e2e.rs"

[[test]]
name = "sr_inventory_gl_tenant_isolation_e2e"
path = "tests/sr_inventory_gl_tenant_isolation_e2e.rs"

[[test]]
name = "cross_module_ar_invoice_lifecycle_e2e"
path = "tests/cross_module_ar_invoice_lifecycle_e2e.rs"

[[test]]
name = "subscription_ttp_ar_lifecycle_e2e"
path = "tests/subscription_ttp_ar_lifecycle_e2e.rs"

[[test]]
name = "manufacturing_phase_a_e2e"
path = "tests/manufacturing_phase_a_e2e.rs"

[[test]]
name = "manufacturing_phase_b_e2e"
path = "tests/manufacturing_phase_b_e2e.rs"

[[test]]
name = "security_pdf_editor_cors_e2e"
path = "tests/security_pdf_editor_cors_e2e.rs"

[[test]]
name = "security_primitives_e2e"
path = "tests/security_primitives_e2e.rs"

[[test]]
name = "security_consumer_validation_e2e"
path = "tests/security_consumer_validation_e2e.rs"

[[test]]
name = "security_dlq_redaction_e2e"
path = "tests/security_dlq_redaction_e2e.rs"

[[test]]
name = "db_pool_exhaustion_identity_auth_e2e"
path = "tests/stress/db_pool_exhaustion_identity_auth_e2e.rs"

[[test]]
name = "auth_rate_limit_under_load_e2e"
path = "tests/stress/auth_rate_limit_under_load_e2e.rs"

[[test]]
name = "event_bus_flood_jetstream_e2e"
path = "tests/stress/event_bus_flood_jetstream_e2e.rs"

[[test]]
name = "financial_double_spend_allocation_e2e"
path = "tests/stress/financial_double_spend_allocation_e2e.rs"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
event-bus = { path = "../platform/event-bus" }
async-nats = "0.38"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
subscriptions-rs = { path = "../modules/subscriptions" }
payments-rs = { path = "../modules/payments" }
ar-rs = { path = "../modules/ar" }
gl-rs = { path = "../modules/gl" }
ap = { path = "../modules/ap" }
inventory-rs = { path = "../modules/inventory" }
production-rs = { path = "../modules/production" }
bom-rs = { path = "../modules/bom" }
shipping-receiving-rs = { path = "../modules/shipping-receiving" }
reporting = { path = "../modules/reporting" }
treasury = { path = "../modules/treasury" }
consolidation = { path = "../modules/consolidation" }
fixed-assets = { path = "../modules/fixed-assets" }
timekeeping = { path = "../modules/timekeeping" }
notifications-rs = { path = "../modules/notifications" }
customer-portal = { path = "../modules/customer-portal" }
tower = { version = "0.5", features = ["util"] }
axum = "0.8"
audit = { path = "../platform/audit" }
projections = { path = "../platform/projections" }
tenant-registry = { path = "../platform/tenant-registry" }
control-plane = { path = "../platform/control-plane" }
security = { path = "../platform/security" }
event-consumer = { path = "../platform/event-consumer" }
compliance-export = { path = "../tools/compliance-export" }
integrations-rs = { path = "../modules/integrations" }
party-rs = { path = "../modules/party" }
ttp-rs = { path = "../modules/ttp" }
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3"
hmac = "0.12"
base64 = "0.22"
rsa = { version = "0.9", features = ["pem"] }
jsonwebtoken = "9"

[dev-dependencies]
serial_test = "3.0"

[lints]
workspace = true
