[package]
name = "platform-client-ar"
version = "0.1.0"
edition = "2021"
description = "Generated typed client for AR Service"

[dependencies]
platform-sdk = { path = "../../platform/platform-sdk" }
platform-http-contracts = { path = "../../platform/http-contracts" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }

[dev-dependencies]
security = { path = "../../platform/security" }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[lints]
workspace = true
