[package]
name = "platform-client-doc-mgmt"
version = "0.1.0"
edition = "2021"
description = "Generated typed client for Platform Client Doc-Mgmt Service"

[dependencies]
platform-sdk = { path = "../../platform/platform-sdk" }
platform-http-contracts = { path = "../../platform/http-contracts" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "5", features = ["chrono", "uuid"] }

[lints]
workspace = true
