[package]
name = "platform-client-sales-orders"
version = "0.1.0"
edition = "2021"
description = "Typed HTTP client for the Sales Orders Service"

[dependencies]
platform-sdk = { path = "../../platform/platform-sdk" }
platform-http-contracts = { path = "../../platform/http-contracts" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[lints]
workspace = true
