[package]
name = "ap"
version = "1.0.0"
edition = "2021"
description = "Accounts payable: bills, purchase orders, payment runs, vendor management, and AP aging"

[dependencies]
axum = "0.8"
security = { path = "../../platform/security" }
health = { path = "../../platform/health" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate", "uuid", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["cors"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
event-bus = { path = "../../platform/event-bus" }
projections = { path = "../../platform/projections" }
tax-core = { path = "../../platform/tax-core" }
sha2 = "0.10"
hex = "0.4"
async-nats = "0.38"
futures = "0.3"
prometheus = "0.13"

[dev-dependencies]
serial_test = "3.3.1"
uuid = { version = "1", features = ["v4"] }
tax-core = { path = "../../platform/tax-core" }

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bin]]
name = "dlq_replay_drill"
path = "src/bin/dlq_replay_drill.rs"

[lints]
workspace = true
