[package]
name = "ar-rs"
version = "6.4.0"
edition = "2021"
description = "Invoicing, collections, payment application, dunning, and cash flow forecasting"

[dependencies]
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
security = { path = "../../platform/security" }
health = { path = "../../platform/health" }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["cors"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
http-body-util = "0.1"
event-bus = { path = "../../platform/event-bus" }
config-validator = { path = "../../platform/config-validator" }
tax-core = { path = "../../platform/tax-core" }
projections = { path = "../../platform/projections" }
platform-http-contracts = { path = "../../platform/http-contracts", features = ["axum"] }
platform-audit = { package = "audit", path = "../../platform/audit" }
platform-sdk = { path = "../../platform/platform-sdk" }
platform-client-party = { path = "../../clients/party" }
async-nats = "0.38"
futures = "0.3"
prometheus = "0.13"
utoipa = { version = "5", features = ["chrono", "uuid"] }

[dev-dependencies]
serial_test = "3.3.1"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"

[[bin]]
name = "openapi_dump"
path = "src/bin/openapi_dump.rs"

[lints]
workspace = true
