[package]
name = "consolidation"
version = "2.3.0"
edition = "2021"
description = "Multi-entity financial consolidation with intercompany eliminations"

[dependencies]
axum = "0.8"
security = { path = "../../platform/security" }
health = { path = "../../platform/health" }
platform-sdk = { path = "../../platform/platform-sdk" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["cors"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
projections = { path = "../../platform/projections" }
prometheus = "0.13"
sha2 = "0.10"
platform-http-contracts = { path = "../../platform/http-contracts", features = ["axum"] }
event-bus = { path = "../../platform/event-bus" }
utoipa = { version = "5", features = ["chrono", "uuid"] }
config-validator = { path = "../../platform/config-validator" }
platform-client-gl = { path = "../../clients/gl" }
platform-client-ar = { path = "../../clients/ar" }
platform-client-ap = { path = "../../clients/ap" }

[dev-dependencies]
serial_test = "3.3.1"
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "openapi_dump"
path = "src/bin/openapi_dump.rs"

[lints]
workspace = true
