[package]
name = "crm-pipeline-rs"
version = "0.1.0"
edition = "2021"
description = "CRM Pipeline: leads, opportunities, pipeline stages, activities, and sales handoff"

[lib]
name = "crm_pipeline_rs"
path = "src/lib.rs"

[[bin]]
name = "crm_pipeline"
path = "src/main.rs"

[[bin]]
name = "openapi_dump"
path = "src/bin/openapi_dump.rs"

[dependencies]
axum = "0.8"
security = { path = "../../platform/security" }
health = { path = "../../platform/health" }
platform-sdk = { path = "../../platform/platform-sdk" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate", "uuid", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["cors"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
event-bus = { path = "../../platform/event-bus" }
platform-http-contracts = { path = "../../platform/http-contracts", features = ["axum"] }
platform-audit = { package = "audit", path = "../../platform/audit" }
platform-client-party = { path = "../../clients/party" }
utoipa = { version = "5", features = ["uuid", "chrono"] }
async-nats = "0.38"
futures = "0.3"
prometheus = "0.13"

[dev-dependencies]
migration-safety-test = { path = "../../tools/migration-safety-test" }
serial_test = "3.3.1"
uuid = { version = "1", features = ["v4"] }
http-body-util = "0.1"
security = { path = "../../platform/security" }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate", "uuid"] }
platform-client-party = { path = "../../clients/party" }
platform-sdk = { path = "../../platform/platform-sdk" }

[lints]
workspace = true
