[package]
name = "customer-portal"
version = "2.2.0"
edition = "2021"
description = "External customer portal auth boundary service"

[[bin]]
name = "customer-portal"
path = "src/main.rs"

[lib]
name = "customer_portal"
path = "src/lib.rs"

[dependencies]
axum = "0.8"
security = { path = "../../platform/security" }
health = { path = "../../platform/health" }
platform-sdk = { path = "../../platform/platform-sdk" }
event-bus = { path = "../../platform/event-bus" }
platform_contracts = { path = "../../platform/platform-contracts" }
platform-http-contracts = { path = "../../platform/http-contracts", features = ["axum"] }
config-validator = { path = "../../platform/config-validator" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate", "uuid", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["cors"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
prometheus = "0.13"
argon2 = "0.5"
password-hash = "0.5"
rand = "0.8"
jsonwebtoken = "9"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
platform-client-doc-mgmt = { path = "../../clients/platform-client-doc-mgmt" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
utoipa = { version = "5", features = ["chrono", "uuid"] }

[dev-dependencies]
serial_test = "3.3.1"
rsa = "0.9"

[[bin]]
name = "openapi_dump"
path = "src/bin/openapi_dump.rs"

[lints]
workspace = true
