[package]
name = "fixed-assets"
version = "2.1.10"
edition = "2021"
description = "Fixed asset lifecycle: capitalization, depreciation schedules, and disposals"

[dependencies]
axum = "0.8"
security = { path = "../../platform/security" }
health = { path = "../../platform/health" }
platform-sdk = { path = "../../platform/platform-sdk" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["cors"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
event-bus = { path = "../../platform/event-bus" }
platform-http-contracts = { path = "../../platform/http-contracts", features = ["axum"] }
projections = { path = "../../platform/projections" }
utoipa = { version = "5", features = ["uuid", "chrono"] }
async-nats = "0.38"
futures = "0.3"
prometheus = "0.13"
config-validator = { path = "../../platform/config-validator" }

[dev-dependencies]
migration-safety-test = { path = "../../tools/migration-safety-test" }
serial_test = "3.3.1"
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "openapi_dump"
path = "src/bin/openapi_dump.rs"

[lints]
workspace = true
